doc(evokit): Overhaul documentation
Many syntax fixes. Also remove __new__ from
documentation.

--- a/docs/source/guides/examples/onemax.ipynb
+++ b/docs/source/guides/examples/onemax.ipynb
@@ -357,7 +357,7 @@
     "\n",
     "For EvoKit's specialised\n",
     "data collection and reporting module, see the\n",
-    "[Watcher Tutorial](./watcher.ipynb)."
+    "[Watcher Tutorial](./watch.ipynb)."
    ]
   },
   {
