feat(lgp): Update to new API; add verbose mode
Now, a stateful context no longer uses input registers.
Mutable input registers are variable
registers. Immutable input registers are constant
registers.

In verbose mode, a stateful context will
print a lot. This might help with debugging.

--- a/docs/source/guides/examples/lgp.ipynb
+++ b/docs/source/guides/examples/lgp.ipynb
@@ -22,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import evokit.evolvables.lgp as lgp"
+    "import evokit.evolvables.lgp as lgp\n",
+    "from evokit.evolvables.lgp import cells"
    ]
   },
   {
@@ -31,14 +32,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "LinearProgram.__init__() missing 1 required positional argument: 'inputs'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m program \u001b[38;5;241m=\u001b[39m \u001b[43mlgp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mLinearProgram\u001b[49m\u001b[43m(\u001b[49m\u001b[43mregisters\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m                            \u001b[49m\u001b[43mconstants\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m11\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(program)\n",
-      "\u001b[1;31mTypeError\u001b[0m: LinearProgram.__init__() missing 1 required positional argument: 'inputs'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LGP execution context here. Register states:\n",
+      "> r[3. 4. 5. 6.], c[ 7.  8.  9. 10. 11.]\n"
      ]
     }
    ],
@@ -59,6 +57,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -66,21 +71,30 @@
      "text": [
       "\n",
       "===== Running LGP in Context =====\n",
-      "Collect command into structure: r[2] <- add(c[1], r[2])\n",
+      "r[1] := add(r[2], r[3])\n",
+      "r[0] := sub(r[1], r[2])\n",
+      "r[2] := add(c[1], r[2])\n",
+      "Collect command into structure:\n",
+      "> r[2] <- add(c[1], r[2])\n",
+      "> r[2] <- add(c[2], r[1])\n",
+      "[r[2] <- add(c[1], r[2]), r[2] <- add(c[2], r[1])]\n",
+      "sdfsdg\n",
+      "r[2] := add(c[2], r[1])\n",
       "\n",
       "===== End State of LGP =====\n",
-      "This is a linear program.Constants c = [5. 6. 7.],\n",
-      "Registers r = [10.  7. 14.  4.]\n",
+      "LGP execution context here. Register states:\n",
+      "> r[10.  7. 14.  4.], c[5. 6. 7.]\n",
       "\n",
       "===== End State of Benchmark for Comparison =====\n",
       "Benchmark constants: [5.0, 6.0, 7.0]\n",
-      "Test: benchmark registers: [10.0, 7.0, 14.0, 4.0],\n"
+      "Test: benchmark registers: [10.0, 7.0, 9.0, 4.0],\n"
      ]
     }
    ],
    "source": [
     "A = lgp.LinearProgram(constants=(5, 6, 7),\n",
-    "                      registers=(1, 2, 3, 4))\n",
+    "                      registers=(1, 2, 3, 4),\n",
+    "                      verbose=True)\n",
     "\n",
     "initial_registers = list(A.registers.copy())\n",
     "initial_constants = list(A.constants.copy())\n",
@@ -91,18 +105,22 @@
     "def sub(a: float, b: float) -> float:\n",
     "    return a + b\n",
     "\n",
-    "def less(a: float, b: float) -> bool:\n",
+    "def lt(a: float, b: float) -> bool:\n",
     "    return a < b\n",
+    "\n",
+    "def gt(a: float, b: float) -> bool:\n",
+    "    return a > b\n",
     "\n",
     "def print_args(a: float, b: float) -> float:\n",
     "    return 0\n",
     "from typing import Sequence\n",
-    "oprs: Sequence[lgp.Instruction] = [lgp.Operation(add, 1, (2, 3)),\n",
-    "                                  lgp.Operation(sub, 0, (1, 2)),\n",
-    "                                  lgp.Operation(add, 2, (-2, 2)),\n",
-    "                                  lgp.StructOverLines(lgp.If(lgp.Condition(less, (1, 2))), 2),\n",
-    "                                  lgp.Operation(add, 2, (-2, 2)),\n",
-    "                                  lgp.Operation(add, 2, (-3, 1)),\n",
+    "oprs: Sequence[lgp.Instruction] = [lgp.Operation(add, 1, cells(2, 3)),\n",
+    "                                   lgp.Operation(sub, 0, cells(1, 2)),\n",
+    "                                   lgp.Operation(add, 2, cells(-2, 2)),\n",
+    "                                   lgp.StructOverLines(lgp.If(lgp.Condition(lt,\n",
+    "                                                                           cells(1, 2))), 2),\n",
+    "                                   lgp.Operation(add, 2, cells(-2, 2)),\n",
+    "                                   lgp.Operation(add, 2, cells(-3, 1)),\n",
     "                                  ]\n",
     "\n",
     "print(\"\\n===== Running LGP in Context =====\")\n",
@@ -142,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
